rsyslog (7.2.1-2) UNRELEASED; urgency=low

  * Fix example configuration for logging to tty8.

 -- Michael Biebl <biebl@debian.org>  Tue, 13 Nov 2012 22:28:48 +0100

rsyslog (7.2.1-1) experimental; urgency=low

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Mon, 29 Oct 2012 16:30:14 +0100

rsyslog (7.2.0-1) experimental; urgency=low

  * New upstream release.
    - Support for BSD-style blocks has been removed and the rsyslog.conf
      man page was updated accordingly. (Closes: #585536)
    - Fixes immark documentation wrt $MarkMessagePeriod. (Closes: #605831)
    - No longer requires libgcrypt with newer GnuTLS versions.
      (Closes: #638658)
  * Track stable releases again.
  * Remove unnecessary duplication from the init script and also drop the -c
    compatibility mode option.

 -- Michael Biebl <biebl@debian.org>  Tue, 23 Oct 2012 01:03:54 +0200

rsyslog (7.1.12-1) experimental; urgency=low

  * New major upstream release from the v7 beta branch. (Closes: #645640)
    - Greatly improved configuration language and execution engine.
    - Full support for structured logging and project lumberjack / CEE.
    - More plugins - like support for MongoDB or the kernel's new structured
      logging system.
    - Higher performance - optimizations for script-based filters, enhanced
      multithreaded TCP input plugin, DNS cache and more.
  * Update watch file to track beta releases.
  * Drop patches which have been merged upstream.
  * Update Build-Depends:
    - Add libestr-dev, libee-dev, libjson0-dev and uuid-dev.
    - Bump librelp-dev to (>= 1.0.1).
  * Build imkmsg module which provides support for reading structured kernel
    log messages.
  * Build imptcp module which provides less features then imtcp but is quite a
    bit faster.
  * Build message modification modules mmjsonparse and mmnormalize which
    provide functionality related to structured logging/lumberjack/CEE. This
    requires liblognorm.