@@ -3,17 +3,23 @@
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
+DEB_HOST_ARCH_OS ?= $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
+
 %:
 	dh $@ --with autotools_dev
 
+ifeq ($(DEB_HOST_ARCH_OS), linux)
+confflags += --enable-imptcp
+endif
+
 override_dh_auto_configure:
 	dh_auto_configure -- \
+		$(confflags) \
 		--enable-mysql \
 		--enable-pgsql \
 		--enable-ommongodb \
 		--enable-mail \
 		--enable-imfile \
-		--enable-imptcp \
 		--enable-impstats \
 		--enable-kmsg \
 		--enable-klog \
